added favorites api
